refactor: use virtual threads for client connection handling